# gh-view

./: .gitignore  AGENTS.MD  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: design-system.md
src/: app.rs  config.rs  main.rs
src/app/: dashboard.rs  detail.rs  rows.rs  search.rs  status.rs
src/github/: client.rs  command.rs  error.rs  gh.rs  mock.rs  mod.rs  queries.rs  source.rs  source_context.rs
src/github/gh/: types.rs
src/model/: dashboard.rs  discussion.rs  mod.rs  pull_request.rs
src/ui/: dashboard.rs  detail.rs  footer.rs  help.rs  input.rs  layout.rs  mock_debug.rs  mod.rs  palette.rs  render.rs  terminal.rs  text.rs  theme.rs  theme_picker.rs
tests/: doctor_cli.rs
