[package]
name = "gh-view"
version = "0.0.1"
edition = "2024"
description = "A terminal view for GitHub pull requests"
license = "MIT"
repository = "https://github.com/nikitaivanovvff/gh-view"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
